Fixed a couple of layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,6 +106,10 @@ Monument comments
 	margin-top: 20px;
 }
 
+.comment-header > h3 {
+	padding: 0 10px;
+}
+
 .comment-content {
-	margin-top: 10px;
+	margin-top: 0;
 }
